wip; save profile info to firestore encrypted
